<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.AddDogFragment">

    <TextView
        style="@style/Header"
        android:backgroundTint="@color/colorAccent"
        android:id="@+id/header"
        android:text="@string/add_dog"/>

    <EditText
        style="@style/Attribute"
        android:id="@+id/add_name"
        android:hint="@string/name" />

    <EditText
        style="@style/Attribute"
        android:id="@+id/add_age"
        android:hint="@string/age" />

    <EditText
        style="@style/Attribute"
        android:id="@+id/add_breed"
        android:hint="@string/breed" />

    <Button
        style="@style/Button"
        android:backgroundTint="@color/colorAccent"
        android:id="@+id/button_add"
        android:text="@string/add_entry" />

</LinearLayout>